Added new files

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 				Links to my projects.
 				
 				<li> <a href="http://www.mrgeiger.com/students/hgault/JavaScript.html"> 99 bottles of Water </a></li>
+				<li> <a href="http://www.mrgeiger.com/students/hgault/battleship.html"> Play Battleship </a></li>
+				<li> <a href="http://www.mrgeiger.com/students/hgault/Phrase-O-Matic.html"> Phrase-O-Matic </a></li>
 				
 			</section>
 			
